# DT_Flow

./: .gitignore  CMakeLists.txt  README.md
Base/: Profile.cpp  Stats.cpp  SubSamples.cpp
Base/include/: DataContainer.h  Profile.h  Stats.h  SubSamples.h
Correlation/: Correlation.cpp
Documentation/html/: Alignment_8h_source.html  Axis_8h_source.html  BaseLinkDef_8h_source.html  CorrectionCalculator_8h_source.html  CorrectionDataVectorChannelized_8h_source.html  CorrectionDataVector_8h_source.html  CorrectionDetector_8h_source.html  CorrectionHistogramBase_8h_source.html  CorrectionHistogramChannelizedSparse_8h_source.html  CorrectionHistogramChannelized_8h_source.html  CorrectionHistogramSparse_8h_source.html  CorrectionHistogram_8h_source.html  CorrectionLog_8h_source.html  CorrectionManager_8h_source.html  CorrectionOnInputData_8h_source.html  CorrectionOnQvector_8h_source.html  CorrectionProfile3DCorrelations_8h_source.html  CorrectionProfileChannelizedIngress_8h_source.html  CorrectionProfileChannelized_8h_source.html  CorrectionProfileComponents_8h_source.html  CorrectionProfileCorrelationComponentsHarmonics_8h_source.html  CorrectionProfileCorrelationComponents_8h_source.html  CorrectionProfile_8h_source.html  CorrectionQnVectorBuild_8h.html  CorrectionQnVectorBuild_8h_source.html  CorrectionQnVector_8h_source.html  CorrectionStepBase_8h_source.html  CorrectionTask_8h_source.html  CorrectionsSetOnInputData_8h_source.html  CorrectionsSetOnQvector_8h_source.html  CorrelationLinkDef_8h_source.html  CorrelationManager_8h_source.html  Correlation_8h_source.html  CutAbove_8h_source.html  CutBelow_8h_source.html  CutOutside_8h_source.html  CutSetBit_8h_source.html  CutValue_8h_source.html  CutWithin_8h_source.html  CutsBase_8h_source.html  (+324 more)
Documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+46 more)
Documentation/latex/: CorrectionQnVectorBuild_8h.tex  annotated.tex  classBase.tex  classHolds.tex  classOutValue.tex  classQnCorrectionsCorrectionOnInputData.tex  classQnCorrectionsCorrectionOnQvector.tex  classQnCorrectionsCorrectionStepBase.tex  classQnCorrectionsCorrectionsSetOnInputData.tex  classQnCorrectionsCorrectionsSetOnQvector.tex  classQnCorrectionsCutAbove.tex  classQnCorrectionsCutBelow.tex  classQnCorrectionsCutOutside.tex  classQnCorrectionsCutSetBit.tex  classQnCorrectionsCutValue.tex  classQnCorrectionsCutWithin.tex  classQnCorrectionsCutsBase.tex  classQnCorrectionsCutsSet.tex  classQnCorrectionsDataVector.tex  classQnCorrectionsDataVectorChannelized.tex  classQnCorrectionsDetector.tex  classQnCorrectionsDetectorConfigurationBase.tex  classQnCorrectionsDetectorConfigurationChannels.tex  classQnCorrectionsDetectorConfigurationTracks.tex  classQnCorrectionsDetectorConfigurationsSet.tex  classQnCorrectionsEventClassVariable.tex  classQnCorrectionsEventClassVariablesSet.tex  classQnCorrectionsHistogram.tex  classQnCorrectionsHistogramBase.tex  classQnCorrectionsHistogramChannelized.tex  classQnCorrectionsHistogramChannelizedSparse.tex  classQnCorrectionsHistogramSparse.tex  classQnCorrectionsInputGainEqualization.tex  classQnCorrectionsManager.tex  classQnCorrectionsProfile.tex  classQnCorrectionsProfile3DCorrelations.tex  classQnCorrectionsProfileChannelized.tex  classQnCorrectionsProfileChannelizedIngress.tex  classQnCorrectionsProfileComponents.tex  classQnCorrectionsProfileCorrelationComponents.tex  (+151 more)
Macros/Compiled/: BuildSystematics.cpp  CorrelationHelper.cxx  CorrelationHelper.h  rootlogon.C
Painter/: FlowFunctions.h
QnCorrections/: DetectorConfigurationChannels.cpp
Runner/: PrimaryQa.cpp  all_tracks.root  batch.sh  batch_occupancy.sh  batch_optimization.sh  batch_run.sh  batch_run_occupancy.sh  batch_run_optimization.sh  efficiency.root  run.sh  run_configuration.sh  run_occupancy.sh
src/: BuildAverage.cc  CMakeLists.txt  CalculateEfficiency.cc  Centrality.cxx  Centrality.h  Correct.cpp  CorrectionTask.cpp  CorrectionTask.h  Correlate.cpp  CorrelationTask.cpp  CorrelationTask.h  DataTreeVarManager.cpp  DataTreeVarManager.h  Selector.cpp  Selector.h  TrackDensity.cc  TrackDensity.h  averager.cc  averager.h  cent_10pc.cxx  efficiency.cc  efficiency.h  efficiency_builder.cc  efficiency_builder.h  occupancy.cc  occupancy_corrections.cc  occupancy_corrections.h  optimization.cc  optimize.cc  run_tasks.cc
src/Processing/: HADES_constants.h  centrality.cc  centrality.h  correction_task.cpp  correction_task.h  correction_task_full.cc  correction_task_full.h  correction_task_fw3s.cc  correction_task_fw3s.h  correction_task_fw3x.cc  correction_task_fw3x.h  correction_task_rnd.cc  correction_task_rnd.h  correlation_task.cc  correlation_task.h  correlation_task_fw3s.cc  correlation_task_fw3s.h  correlation_task_fw3x.cc  correlation_task_fw3x.h  correlation_task_rnd.cc  correlation_task_rnd.h  data_tree_var_manager.cc  data_tree_var_manager.h  efficiency.h  efficiency_builder.h  occupancy_corrections.cc  occupancy_corrections.h  selector.cc  selector.cpp  selector.h  task_factory.cc  task_factory.h  task_factory_fw3s.cc  task_factory_fw3s.h  task_factory_rnd.cc  task_factory_rnd.h  task_factory_track_density.cc  task_factory_track_density.h  track_density.cc  track_density.h
